# timeline

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  flake.nix
client_api/: Cargo.toml
client_api/src/: api.rs  external.rs  lib.rs  plugin.rs  result.rs  style.rs
frontend/: .gitignore  Cargo.toml  build.rs  dev_run.txt  index.html  manifest.json  manifest.webmanifest  offline.html  style.css
frontend/src/: api.rs  client.rs  error.rs  event_manager.rs  events_display.rs  lib.rs  main.rs  plugin_manager.rs  style.rs  timeline.rs  timeline_view.rs  wrappers.rs
link/src/: client_plugins.rs  lib.rs  server_plugins.rs
link_proc_macro/: Cargo.toml
link_proc_macro/src/: available_plugins.rs  client_plugins.rs  frontend_plugins.rs  lib.rs  server_plugins.rs
linker/: Cargo.toml  flake.nix  link.Cargo.toml
linker/src/: main.rs
package-generator/: Cargo.toml  frontend.Cargo.toml  link.Cargo.toml  main.Cargo.toml
package-generator/src/: main.rs
server/: .gitignore  Cargo.toml  build.rs  config.toml.example
server/src/: api.rs  cache.rs  config.rs  db.rs  error.rs  main.rs  plugin_manager.rs  plugin_registry.rs  proxy.rs
server_api/: Cargo.toml
server_api/src/: cache.rs  config.rs  db.rs  error.rs  external.rs  lib.rs  plugin.rs  web.rs
tests/e2e/: README.md  build_tier1.sh  package-lock.json  package.json  playwright.config.ts  playwright.spec.ts  probe_tier1.sh  probe_tier3.sh  serve.sh  serve_tier1.sh  serve_tier3.sh  smoke.sh
timeline_plugin_client_sdk/: Cargo.toml
timeline_plugin_client_sdk/src/: api.rs  context.rs  lib.rs  mount.rs  style.rs
timeline_plugin_sdk/: Cargo.toml
timeline_plugin_sdk/src/: assets.rs  auth.rs  cache.rs  config.rs  db.rs  error.rs  launch.rs  lib.rs  manifest.rs  plugin.rs  routes.rs
types/: Cargo.toml  build.rs
types/src/: api.rs  available_plugins.rs  external.rs  lib.rs  timing.rs
