[package]
name = "client_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "client_api"
path = "src/lib.rs"

[features]
experiences = ["types/experiences"]

[dependencies]
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
types = { path = "../types/", features = ["client"] }
url = { version = "2.5.4", features = ["serde"] }
web-sys = { version = "0.3.69", features = [
  "TouchList",
  "TouchEvent",
  "Touch",
  "HtmlDocument",
] }
