[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
reqwest = "0.11.26"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
stylers = "1.0.0-alpha"
types = {path = "../types/", features = ["reqwest"]}
url = { version = "2.5.0", features = ["serde"] }

[build-dependencies]
stylers = "1.0.0-alpha"
