[package]
name = "timeline_frontend"
version = "0.2.0"
edition = "2021"

[dependencies]
types = { path = "../types" }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CustomEvent",
    "Document",
    "DomRect",
    "DomRectReadOnly",
    "Element",
    "HtmlDocument",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Node",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Window",
] }

gloo-net = { version = "0.6", features = ["json"] }
gloo-events = "0.2"

cookie = "0.18"
console_error_panic_hook = "0.1"

[[bin]]
name = "timeline_frontend_bin"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
