[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
experiences = ["server_api/experiences"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
dyn_link = { path = "../link/", features = ["server"] }
server_api = { path = "../server_api/" }
rocket = { version = "0.5.1", features = ["json"] }
