[package]
name = "server"
version = "0.2.0"
edition = "2021"

[dependencies]
types = { path = "../types" }

rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
futures = "0.3"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
