[package]
name = "server_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "timeline_server_api"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
url = { version = "2.5.3", features = ["serde"] }
mongodb = { version = "2.8.1", features = ["tokio-runtime"] }
rocket = { version = "0.5.1", features = ["json"] }
