[package]
name = "server_api"
version = "0.1.0"
edition = "2021"

[features]
experiences = ["types/experiences"]

[lib]
name = "server_api"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
url = { version = "2.5.3", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
types = { path = "../types/", features = ["server"] }
toml = "0.8.10"
