[package]
name = "timeline_plugin_client_sdk"
version = "0.1.0"
edition = "2021"
description = "Build Timeline plugin UIs in Leptos, compiled to wasm and mounted in shadow DOM by the main timeline frontend."

[dependencies]
types = { path = "../types" }

leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlLinkElement",
    "Node",
    "ShadowRoot",
    "Window",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

reqwest = { version = "0.12", default-features = false, features = ["json"] }
gloo-net = { version = "0.6", features = ["json"] }

[lib]
crate-type = ["cdylib", "rlib"]
