[package]
name = "timeline_plugin_sdk"
version = "0.1.0"
edition = "2021"
description = "Build Timeline plugin server processes that talk to the main timeline server over HTTP."

[dependencies]
types = { path = "../types" }

rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

anyhow = "1"
thiserror = "1"
tracing = "0.1"
