[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
mongodb = { version = "2.8.1", optional = true }
reqwest = { version = "0.12.9", optional = true }
serde_json = "1.0.133"

[lib]
name = "types"
path = "src/lib.rs"

[features]
server = ["dep:mongodb"]
client = ["dep:reqwest"]
experiences = []
