[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
mongodb = { version = "2.8.1", features = ["tokio-runtime"], optional = true }
reqwest = { version = "0.12.9" }
serde_json = "1.0.133"
link_proc_macro = { path = "../link_proc_macro" }

[lib]
name = "types"
path = "src/lib.rs"

[features]
server = ["dep:mongodb"]
client = []
experiences = []
