[package]
name = "types"
version = "0.2.0"
edition = "2021"
description = "Shared types between timeline server, frontend, plugins, and SDKs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "types"
path = "src/lib.rs"
